fixing spacing

--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,7 @@ img {
     padding: 1em;
     margin-top: 0;
     padding-top: 0.4em;
+    padding-bottom: 0.5em;
 }
 
 .static-1 {
